<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_wait">wait_ac</string>
    <string name="activity_login">login_ac</string>
    <string name="activity_main">main_ac</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LOGIN_ID">ID:</string>
    <string name="LOGIN_PW">password:</string>
    <string name="LOGIN_CB1">Rememer Password</string>
    <string name="LOGIN_CB2">Auto-Login</string>
    <string name="LOGIN_LOGBT">Log in</string>

</resources>
